examples/test/testpolicy1397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1397
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key3: value10
      key2: value29
      key15: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value47
      podSelector:
        matchLabels:
          key48: value19
